--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,8 @@
 /*
   File: about.css
   Mô tả: Kiểu dáng cho trang giới thiệu Learnie (câu chuyện, giá trị cốt lõi, đội ngũ).
-  Người thực hiện: Nguyễn Đặng Quang Phúc – 23521204
-  Ngày cập nhật: 26/10/2025
+  Người thực hiện: Lê Ngọc Phương Nga – 23520992
+  Ngày cập nhật: 12/11/2025
 */
 
 /* ===== HERO ABOUT ===== */
